// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gatsby Static Routes Should serve custom 404 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Gatsby Plugin Fastify</title>
</head>

<body>
  <h1>Page Not Found</h1>
</body>

</html>"
`;

exports[`Gatsby Static Routes Should serve static index route 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Gatsby Plugin Fastify</title>
</head>

<body>
  <h1>Hello World</h1>
</body>

</html>"
`;
